fix bottom of text being cut off in code blocks
The bottom of every line of text in code blocks was cut off due to
insufficiently large line-height.

Fix by changing the line-height to 'normal'. The browsers should infer
the correct size required for a font to be properly rendered.

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -86,8 +86,14 @@ a:not([class]) {
 
 code {
   font-family: $mono-font-family;
-  font-size: 1em;
-  line-height: $body-line-height;
+  font-size: 1rem;
+  /* This was set to $body-line-height, but normal is a sane default. We could
+   * restore the previous value if the lines end up being too narrow. */
+  line-height: normal;
+
+  background-color: $code-background-color;
+  border: $border $border-color;
+  border-radius: $border-radius;
 }
 
 figure,
